CAGRID-603, CAGRID-711: Moving away from requiring the endorsed jars.  The opensaml project is the biggest source of these in caGrid.  It will still publish those ivy artifacts until I get everything else switched over.
git-svn-id: https://ncisvn.nci.nih.gov/svn/cagrid/trunk/cagrid/Software/core@18006 dd7b0c16-3c94-4492-92de-414b6a06f0b1